--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -20,10 +20,11 @@
     "@angular/http": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
+    "@angular/router": "^5.2.0",    
     "core-js": "^2.4.1",
     "express": "^4.16.3",
     "mongodb": "^3.0.7",
+    "mongoose": "^5.0.17",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
