--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/http": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",    
+    "@angular/router": "^5.2.0",
+    "bcrypt": "^2.0.1",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
     "mongodb": "^3.0.7",
