--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build --prod",
+    "build": "ng build --dev",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -26,6 +26,10 @@
     "express": "^4.16.3",
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.17",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
