--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build --dev",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -24,6 +25,7 @@
     "bcrypt": "^2.0.1",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
+    "jwt-simple": "^0.5.1",
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.17",
     "passport": "^0.4.0",
